# cs_plugin

./: .gitignore  README.md
cn.elibot.plugin.samples.myDaemon/: pom.xml
cn.elibot.plugin.samples.myDaemon/daemon/: CMakeLists.txt  Data.cpp  Data.h  MyXmlRpcServerMethods.cpp  MyXmlRpcServerMethods.h  SConscript  SConstruct  main.cpp  xmlrpcserver.cpp
cn.elibot.plugin.samples.myDaemon/daemon/src/: CMakeLists.txt
cn.elibot.plugin.samples.myDaemon/daemon/src/daemon_pkg/: CMakeLists.txt  SConscript  SConstruct  main.cpp  package.xml
cn.elibot.plugin.samples.myDaemon/daemon/src/daemon_pkg/include/: Data.h  MyXmlRpcServerMethods.h  interpolation.h  webServer.h  xmlrpcserver.h
cn.elibot.plugin.samples.myDaemon/daemon/src/daemon_pkg/src/: CMakeLists.txt  Data.cpp  MyXmlRpcServerMethods.cpp  interpolation.cpp  webServer.cpp  xmlrpcserver.cpp
cn.elibot.plugin.samples.myDaemon/src/main/java/cn/elibot/plugin/samples/daemon/: Activator.java  MyDaemonNavbarServiceImpl.java  MyDaemonServiceImpl.java  MyDaemonViewImpl.java  XmlRpcMyDaemonFacade.java
cn.elibot.plugin.samples.myDaemon/src/main/java/cn/elibot/plugin/samples/daemon/resource/: ImageHelper.java  ResourceSupport.java
cn.elibot.plugin.samples.myDaemon/src/main/resources/daemon/: HelloWorld  server.py
cn.elibot.plugin.samples.myDaemon/src/main/resources/i18n/: text.properties  text_en.properties  text_zh.properties
cn.elibot.plugin.samples.myDaemon/src/test/java/cn/elibot/plugin/samples/mydaemon/impl/: AppTest.java
